# constrained_flow_matching

./: .gitignore  README.md  benchmark.py  generation.py  make_benchmark_table.sh  pcfm.py  pi_gdm.py  plots.py  pyproject.toml  training.py
architectures/: flow.py  mlp.py  normalizer.py  unet.py
datasets/: avoiding.py  bimodal_distribution.py  mnist.py  spiral.py  star.py  unit_circle.py
examples/: avoiding.py  bimodal.py  common.py  example_base.py  mnist.py  spiral.py  star.py  unit_circle.py
tests/: test_avoiding.py  test_datasets.py  test_flow_architectures.py  test_generate.py  test_mlp.py  test_normalizer.py  test_training.py
