[project]
name = "constrained-flow-matching"
version = "0.1.0"
description = "Applying constraints to pre-trained flow-matching models"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cloudpickle>=3.1.2",
    "flax>=0.12.5",
    "jax[cuda13]>=0.9.1",
    "matplotlib>=3.10.8",
    "setuptools<=71",
    "tensorboard>=2.20.0",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.4",
]

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
line-length = 80

[tool.ruff.lint]
select = ["E", "F", "W"]
